--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,15 @@ name = "cargo-first"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 no-entrypoint = []
 test-bpf = []
 
 [dependencies]
 solana-program = "1.8.1"
+
+[lib]
+crate-type = ["cdylib", "lib"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
